Skysphere, Triangles, BVH